--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <a href='/blog'>Blog</a>
+    <a href='/library'>Library</a>
+    <a href='/podcast'>Podcast</a>
+    <hr/>
     <%= yield %>
   </body>
 </html>
