Add simple search form and basic search

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,11 @@
+<%= form_with(url: "/search", method: "get", local: true) do %>
+  <%= label_tag(:search, "Search for:") %>
+  <%= text_field_tag(:search) %>
+  <%= submit_tag("Search") %>
+<% end %>
+
+<br />
+
 <% @posts.each do |post| %>
   <%= post.title %>
   Authored by <%= post.authors.pluck(:full_name).to_sentence %>
